<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>

    <string name="txtSinImplementar">¡No implementado aún!</string>

    <!-- Opciones -->
    <string name="txtPausarPartida">Pausar Partida</string>
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza movida solo puede saltar única una pieza.</string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>
    <string name="prefTituloCategoria4">Configuración</string>
    <string name="defaultColor">1</string>
    <string name="default_ColorKey">color</string>

    <string name="prefLink1Title">Video Solitario Celta</string>
    <string name="prefLink1Summary">Solución al juego</string>
    <string name="prefLink1Data">https://www.youtube.com/watch?v=XsejdyCuhY8/</string>

    <string name="prefLink2Title">¡Visita la web!</string>
    <string name="prefLink2Summary">Accede a la web de MiW</string>
    <string name="prefLink2Data">http://miw.etsisi.upm.es/</string>

    <!-- Reiniciar partida -->
    <string name="reiniciarTitle">¿Deseas reiniciar?</string>
    <string name="reiniciarMessage">Si reinicias, perderás
        la partida y los puntos asociados a ella.</string>

    <!-- Guardar en Tarjeta SD -->
    <string name="tarjetaSD">guardaEnTarjetaSD</string>
    <bool name="default_tarjetaSD">false</bool>
    <string name="default_nombreFichero">partidaSolitarioCelta.txt</string>
    <string name="txtErrorTarjetaSD">Memoria externa no disponible</string>
    <string name="partidaGuardadaOk">Partida guardada con éxito</string>

    <!-- Recuperar Partida -->
    <string name="txtErrorRecuperarPartida">No hay partidas a recuperar</string>
    <string name="recuperarTitle">Recuperar Partida</string>
    <string name="recuperarMessage">Si recuperas la partida guardada,
    perderás la partida actual</string>

    <!-- Guardar Puntos -->
    <string name="txtGuardarPuntos">Puntos guardados con éxito</string>
    <string name="key_NombreJugador">pref_NombreJugador</string>
    <string name="title_NombreJugador">Nombre Jugador</string>
    <string name="default_NombreJugador">Jugador 0</string>

    <!-- Mejores Resultados -->
    <string name="txtMejoresResultados">Mejores Resultados</string>
    <string name="txtMejoresResultadosPosicion">&#x1f3c6;</string>
    <string name="txtMejoresResultadosFichas">Fichas</string>
    <string name="txtMejoresResultadosNombreJugador">Jugador</string>
    <string name="txtMejoresResultadosFecha">Fecha</string>

    <!-- Diálogo Borrar resultados -->
    <string name="txtDialogoBorrarResultadosTitulo">Limpiar resultados</string>
    <string name="txtDialogoBorrarResultadosPregunta">¿Estás seguro de que quieres
        borrar todos los resultados?</string>

    <!-- Compartidos -->
    <string name="txtDialogoAfirmativo">Sí</string>
    <string name="txtDialogoNegativo">No</string>

</resources>