<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/prefTituloCategoria1">
        <EditTextPreference
            app:key="pref_NombreJugador"
            app:summary="@string/prefTextoNombreJugador"
            app:title="@string/prefTituloNombreJugador"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/prefTituloCategoria3">
        <Preference
            android:icon="@drawable/ic_youtube"
            app:summary="@string/prefLink1Summary"
            app:title="@string/prefLink1Title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/prefLink1Data" />
        </Preference>
        <Preference
            app:icon="@mipmap/ic_miw_launcher_rounded"
            app:summary="@string/prefLink2Summary"
            app:title="@string/prefLink2Title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/prefLink2Data" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefTituloCategoria4">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/colorsArray"
            app:entryValues="@array/colorsValues"
            app:key="color"
            app:summary="Elige el color que prefieras"
            app:title="Color de las fichas" />
    </PreferenceCategory>

</PreferenceScreen>
