<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mejores_resultados"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MejoresResultadosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPosicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:text="@string/txtMejoresResultadosPosicion"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPiezasEnTableroTexto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="2"
            android:text="@string/txtMejoresResultadosFichas"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNombreJugadorTexto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="2.5"
            android:text="@string/txtMejoresResultadosNombreJugador"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFechaTexto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="3.5"
            android:text="@string/txtMejoresResultadosFecha"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSaltoLineaTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp" />

    <ListView
        android:id="@+id/lvListadoResultados"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBorrarListadoResultados"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:src="@drawable/pngwing"
            app:backgroundTint="#f8d7da" />
    </LinearLayout>
</LinearLayout>